# cv_template_matching

./: CMakeLists.txt  README.md  build.sh  orb_template.cpp  vcpkg.json
